--- a/src/Tasks/TasksInput.css
+++ b/src/Tasks/TasksInput.css
@@ -1,9 +1,9 @@
 .input-container {
   width: 60%;
   height: 20%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 10px;
-  background-color: rgba(50, 55, 61, .2);
+  /* background-color: rgba(50, 55, 61, .2); */
   margin: 0 auto;
   padding: 8px;
   display:flex;
@@ -14,10 +14,14 @@
 
 .flex-container {
   display:flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .small-container-input {
+  display:flex;
+  flex-direction: row;
   margin: 12px;
   margin-bottom: 12px;
   padding-bottom:12px;
@@ -34,4 +38,32 @@
 .button-submit-input:hover {
   padding: 12px;
   background-color: salmon;
+}
+
+#input-1,
+#input-2 {
+  height: 40px;
+  width: 200px;
+  background-color: rgba(255, 255, 255, 0.699);
+  margin-right: 24px;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+}
+
+#input-2 {
+  height: 100px;
+}
+
+#input-1:focus,
+#input-2:focus {
+  border: 1px solid salmon;
+}
+
+#submit-form-button {
+  background-color: rgb(168, 247, 168);
+  padding: 12px 16px;
+  border-radius: 15px;
+  /* transform: skewX(-20deg); */
+  color:black;
 }
