--- a/src/Tasks/TasksOutput.css
+++ b/src/Tasks/TasksOutput.css
@@ -1,9 +1,10 @@
 .container-output {
-  background-color: rgb(221, 227, 247);
+  background-color: rgba(196, 247, 211, 0.699);
   border:1px solid black;
-  width: 40%;
+  width: 50%;
   margin: 0 auto;
   margin-bottom: 14px;
+  padding: 10px;
   color:black;
   border-radius: 25px;
 }
@@ -13,4 +14,5 @@
   letter-spacing: 2px;
   font-size: 24px;
   font-weight: bold;
+  margin:0;
 }
