--- a/src/Tasks/TasksOutput.css
+++ b/src/Tasks/TasksOutput.css
@@ -1,12 +1,13 @@
 .container-output {
   background-color: rgba(196, 247, 211, 0.699);
   border:1px solid black;
-  width: 50%;
+  width: 30%;
   margin: 0 auto;
   margin-bottom: 14px;
   padding: 10px;
   color:black;
   border-radius: 25px;
+  position:relative;
 }
 
 .container-output h3 {
@@ -15,4 +16,25 @@
   font-size: 24px;
   font-weight: bold;
   margin:0;
+}
+
+.icon-delete {
+  color:white;
+  font-size: 16px;
+  font-weight: light;
+  margin: 0;
+  padding: 0;
+  padding: 10px;
+  border-radius: 50%;
+  border: 1px solid white;
+  position: absolute;
+  top: 10%;
+  right: 4%;
+  transition: all .5s;
+  cursor: pointer;
+}
+
+.icon-delete:hover {
+  color: lightgreen;
+  border: 1px solid #cccccc;
 }
