--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
 }
+
+.container-tasks {
+  margin: auto;
+  width: 95%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
